syntax = "proto3";
option go_package = "github.com/SpeedReach/monify";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message UEmpty {}

service UserService {
  rpc UpdateUserName (UpdateUserNameRequest) returns (UEmpty) {
    option (google.api.http) = {
      put: "/v1/user/name"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) ={security: {security_requirement: {key: "Bearer"}}};
  }
  rpc UpdateUserAvatar (UpdateUserAvatarRequest) returns (UEmpty) {
    option (google.api.http) = {
      put: "/v1/user/avatar"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) ={security: {security_requirement: {key: "Bearer"}}};
  }
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {
    option (google.api.http) = {
      get: "/v1/user/info"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) ={security: {security_requirement: {key: "Bearer"}}};
  }
  rpc AddDeviceToken (AddDeviceTokenRequest) returns (UEmpty) {}
  rpc RemoveDeviceToken (RemoveDeviceTokenRequest) returns (UEmpty) {}

  rpc UpdateNickId (UpdateNickIdRequest) returns (UEmpty){
    option (google.api.http) = {
      put: "/v1/user/nick_id"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) ={security: {security_requirement: {key: "Bearer"}}};
  }
}

message GetUserInfoRequest {
  string user_id = 1;
}

message GetUserInfoResponse {
  string name = 1;
  string avatar_url = 2;
  string nick_id = 3;
}

message UpdateUserNameRequest {
  string name = 1;
}

message AddDeviceTokenRequest {
  string device_token = 1;
}

message RemoveDeviceTokenRequest {
  string device_token = 1;
}

message UpdateUserAvatarRequest {
  string image_id = 1;
}

message UpdateNickIdRequest {
  string nick_id = 1;
}